Changing the code I added a table and a heading
Added a new header and table to the HTML document.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
+    <h2> Hello agaon this is 1 change I am making</h2>
+    <table>
+        <td>
+            <tr>Hello table</tr>
+        </td>
+    
+    </table>
 </body>
 </html>
+
